Small contact form align corrections for mobile devices.

--- a/css/contact-style.css
+++ b/css/contact-style.css
@@ -127,7 +127,7 @@ form {
 @media screen and (max-width: 768px) {
     .contact-box {
         max-width: 320px;
-        margin-right: 65px;
+        margin-right: 78px;
     }
 }
 
